--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,9 +6,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico'%}" type="image/x-icon">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Netflix-clone | By Reuben</title>
     {% block styles %}
-    <link rel="stylesheet" href=" static 'css/styles.css'">
+    <link rel="stylesheet" href=" {% static 'css/styles.css'%}">
     {% bootstrap_css %}
     {% endblock styles %}
 </head>
