--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,19 @@
 {% load bootstrap4 %}
 
 {% block content%}
-<h1 class="text-center">Welcome to netflix</h1>
+<div class="container">
+    <h1 class="text-center">Welcome to netflix</h1>
 
+    <div class="row">
+        {% for movie in movies %}
+        <div class="col-md-4">
+            <!-- <p>{{movie.overview}}</p> -->
+            <img src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" width="100%" height="90%" alt="">
+            <h4>{{movie.title}}</h4>
+        </div>
+        {% endfor %}
+        <div class="col-md-4">
+        </div>
+    </div>
+</div>
 {% endblock content%}
