--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,20 +1,150 @@
 {% include 'base.html'%}
 {% load bootstrap4 %}
 
-{% block content%}
+{% block content %}
 <div class="container">
-    <h1 class="text-center">Welcome to netflix</h1>
-
+    <h4 class="text-center mt-3">Welcome to Reuby's-netflix</h4>
+    <h3 class="text-center">Now Playing</h3>
+    <hr>
     <div class="row">
+        
         {% for movie in movies %}
-        <div class="col-md-4">
-            <!-- <p>{{movie.overview}}</p> -->
+        <div class="col-md-3 mb-3">
             <img src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" width="100%" height="90%" alt="">
-            <h4>{{movie.title}}</h4>
+            <p>{{movie.title}}</p>
         </div>
         {% endfor %}
+
         <div class="col-md-4">
         </div>
     </div>
+
+
+
+    <h3 class="text-center">Popular</h3>
+    <hr>
+    <div class="row">
+        
+        {% for movie in popular_movies %}
+        <div class="col-md-3 mb-3">
+             <!-- <p>{{movie.overview}}</p>  -->
+            <img src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" width="100%" height="90%" alt="">
+            <p>{{movie.title}}</p>
+        </div>
+        {% endfor %}
+        
+        <div class="col-md-4">
+        </div>
+    </div>
+
+
+    <h3 class="text-center">Top Rated</h3>
+    <hr>
+    <div class="row">
+        
+        {% for movie in top_movies %}
+        <div class="col-md-3 mb-3">
+             <!-- <p>{{movie.overview}}</p>  -->
+            <img src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" width="100%" height="90%" alt="">
+            <p>{{movie.title}}</p>
+        </div>
+        {% endfor %}
+        
+        <div class="col-md-4">
+        </div>
+    </div>
+
+
+
+    <h3 class="text-center">Upcoming</h3>
+    <hr>
+    <div class="row">
+        
+        {% for movie in up_comings %}
+        <div class="col-md-3 mb-3">
+             <!-- <p>{{movie.overview}}</p>  -->
+            <img src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" width="100%" height="90%" alt="">
+            <p>{{movie.title}}</p>
+        </div>
+        {% endfor %}
+        
+        <div class="col-md-4">
+        </div>
+    </div>
+
+    <h2 class="text-center">TV shows</h2>
+    <h3 class="text-center">Popular TV shows</h3>
+    <hr>
+    <div class="row">
+        
+        {% for show in shows %}
+        <div class="col-md-3 mb-3">
+             <!-- <p>{{movie.overview}}</p>  -->
+            <img src="https://image.tmdb.org/t/p/w500/{{show.poster_path}}" width="100%" height="90%" alt="">
+            <p>{{show.title}}</p>
+        </div>
+        {% endfor %}
+        
+        <div class="col-md-4">
+        </div>
+    </div>
+
+
+    <h3 class="text-center">Airing Today TV shows</h3>
+    <hr>
+    <div class="row">
+        
+        {% for show in airing_shows %}
+        <div class="col-md-3 mb-3">
+             <!-- <p>{{movie.overview}}</p>  -->
+            <img src="https://image.tmdb.org/t/p/w500/{{show.poster_path}}" width="100%" height="90%" alt="">
+            <p>{{show.title}}</p>
+        </div>
+        {% endfor %}
+        
+        <div class="col-md-4">
+        </div>
+    </div>
+
+
+    <!-- on air Tv shows -->
+
+    <h3 class="text-center">On Air TV shows</h3>
+    <hr>
+    <div class="row">
+        
+        {% for show in on_air %}
+        <div class="col-md-3 mb-3">
+             <!-- <p>{{movie.overview}}</p>  -->
+            <img src="https://image.tmdb.org/t/p/w500/{{show.poster_path}}" width="100%" height="90%" alt="">
+            <p>{{show.title}}</p>
+        </div>
+        {% endfor %}
+        
+        <div class="col-md-4">
+        </div>
+    </div>
+
+
+
+    <!-- Top Rated Tv shows -->
+    <h3 class="text-center">Top Rated TV shows</h3>
+    <hr>
+    <div class="row">
+        
+        {% for show in top_rated %}
+        <div class="col-md-3 mb-3">
+             <!-- <p>{{movie.overview}}</p>  -->
+            <img src="https://image.tmdb.org/t/p/w500/{{show.poster_path}}" width="100%" height="90%" alt="">
+            <p>{{show.title}}</p>
+        </div>
+        {% endfor %}
+        
+        <div class="col-md-4">
+        </div>
+    </div>
+
+
+
 </div>
 {% endblock content%}
