--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,10 +1,11 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/"><img src="" alt="Netflix"></a>
+    <a class="navbar-brand" href="/"><img src="{%  static 'images/netflix-logo.png' %}" id="logo" alt="Netflix"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="#"><button type="button"class="btn btn-danger btn-sm">Sign In</button></a> <span class="sr-only">(current)</span></a>
         </li>
