--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,4 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+/* *{
+    font-family: 'Bebas Neue', cursive;
+} */
+*{
+    color: #fff;
+}
+
 #logo{
     width: 100px;
     height: 5vh;
 }
+#hero{
+    background-image: url('/static/images/netflix-cover.jpg');
+    height: 100vh;
+    width: 100%;
+    
+}
+#button-addon2{
+    background-color: #e2402c;
+    color: #fff;
+
+}
+#heading{
+    font-weight: bold;
+    font-size: 9vh;
+}
+#paragraph-header{
+    font-size: 5vh;
+}
+#input{
+    width: 60%;
+}
+#center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) 
+   
+}
+/* #nav{
+    /* position: absolute; 
+    
+}
+#ml-auto{
+     position: absolute;
+    float: right;
+} */ 
