--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -4,7 +4,7 @@
     font-family: 'Bebas Neue', cursive;
 } */
 *{
-    color: #fff;
+    /* color: #fff; */
 }
 
 #logo{
@@ -25,9 +25,11 @@
 #heading{
     font-weight: bold;
     font-size: 9vh;
+    color: #fff;
 }
 #paragraph-header{
     font-size: 5vh;
+    color: #fff;
 }
 #input{
     width: 60%;
@@ -48,3 +50,28 @@
      position: absolute;
     float: right;
 } */ 
+#row2{
+    background-color: #000;
+}
+#section{
+    padding: 8%;
+
+}
+#heading2{
+    font-size: 8vh;
+    font-weight: bold;
+    /* padding: 10%; */
+    color: #fff;
+
+}
+#paragraph2{
+    font-size: 5vh;
+    color: #fff;
+
+}
+.horizontal{
+    border: 4px solid grey;
+}
+#headline{
+    color: #fff;
+}
