--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -23,18 +23,18 @@
     </div>
 </div>
 
-<hr class="horizontal">
+<!-- <hr class="horizontal"> -->
 
-<div class="container-fluid" id="row2">
+<!-- <div class="container-fluid" id="row2"> -->
     <div class="row"id="section">
         <div class="col-md-6">
             <h2 id="heading2">Enjoy on your TV.</h2>
             <p id="paragraph2">Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
         </div>
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="description">
-        </div>
+        </div> -->
 
     </div>
-</div>
+<!-- </div> -->
 {% endblock content%}
