--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg pt-3" id="nav">
+<nav class="navbar navbar-expand-lg" id="nav">
     <a class="navbar-brand" href="/"><img src="{%  static 'images/netflix-logo.png' %}" id="logo" alt="Netflix"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
