--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,1 +1,44 @@
-<h1>User Login</h1>
+
+{% extends 'base.html'%}
+{% load bootstrap4 %}
+{% load static %}
+{% block content %}
+<div class="conatiner-fluid" id="register-page">
+    <h3 class="text-center p-3 font-weight-bold">User Login</h3>
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <form class="shadow-lg" id="login-form">
+            <div class="form-group">
+                <label for="exampleInputEmail1">User Name</label>
+                <label class="sr-only" for="inlineFormInputGroup">Username</label>
+                <div class="input-group mb-2">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text"><i class="fa-solid fa-file-signature fonts"></i></div>
+                  </div>
+                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Username">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Password</label>
+                <label class="sr-only" for="inlineFormInputGroup">Password</label>
+                <div class="input-group mb-2">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text"><i class="fa-solid fa-key fonts"></i></div>
+                  </div>
+                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="password">
+                </div>
+            </div>
+
+            <button type="submit" class="btn" id="register-btn">Login To Netflix</button>
+            <p class="text-center">
+                <small class="text-white font-weight-bold text-center">Don't have an Account? <a href="{% url 'register'%}">Sign_up here</a></small>
+            </p>
+
+            
+        </form>
+    </div>
+    <div class="col-md-3"></div>
+</div>
+</div>
+{% endblock content %}
