--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,12 +3,13 @@
 {% load bootstrap4 %}
 {% load static %}
 {% block content %}
-<div class="conatiner-fluid" id="register-page">
+<div class="container-fluid" id="register-page">
     <h3 class="text-center p-3 font-weight-bold">User Login</h3>
 <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
-        <form class="shadow-lg" id="login-form">
+        <form class="shadow-lg" id="login-form" method="POST" action="{% url 'home'%}">
+          {% csrf_token %}
             <div class="form-group">
                 <label for="exampleInputEmail1">User Name</label>
                 <label class="sr-only" for="inlineFormInputGroup">Username</label>
@@ -16,7 +17,7 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text"><i class="fa-solid fa-file-signature fonts"></i></div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Username">
+                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Username" name="username">
                 </div>
             </div>
             <div class="form-group">
@@ -26,7 +27,8 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text"><i class="fa-solid fa-key fonts"></i></div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="password">
+                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="password" name="password"
+                  >
                 </div>
             </div>
 
