--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,12 +3,13 @@
 {% load bootstrap4 %}
 {% load static %}
 {% block content %}
-<div class="conatiner-fluid" id="register-page">
+<div class="container-fluid" id="register-page">
     <h3 class="text-center p-3 font-weight-bold">Register here</h3>
 <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
-        <form class="shadow" id="form">
+        <form class="shadow" id="form" method="POST">
+            {% csrf_token %}
             <div class="form-group">
                 <label for="exampleInputEmail1">User Name</label>
                 <label class="sr-only" for="inlineFormInputGroup">Username</label>
@@ -16,7 +17,8 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text"><i class="fa-solid fa-file-signature fonts"></i></div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Username">
+                  {{form.username}}
+                  <!-- <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Username"> -->
                 </div>
             </div>
             <div class="form-group">
@@ -26,7 +28,7 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text"><i class="fa-solid fa-envelope fonts"></i></div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Email">
+                  {{form.email}}
                 </div>
             </div>
             <div class="form-group">
@@ -36,7 +38,7 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text"><i class="fa-solid fa-key fonts"></i></div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="password">
+                  {{form.password1}}
                 </div>
             </div>
             <div class="form-group">
@@ -46,11 +48,12 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text"><i class="fa-solid fa-key fonts"></i></div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="verify password">
+                  {{form.password2}}
                 </div>
             </div>
 
             <button type="submit" class="btn" id="register-btn">Register with Netflix</button>
+            {{form.errors}}
             <p class="text-center">
                 <small class="text-white font-weight-bold">Already  have an Account? <a href="{% url 'login'%}">Login here</a></small>
             </p>
