st:form-styling - optimize login-styling

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -27,13 +27,13 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text"><i class="fa-solid fa-key fonts"></i></div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="password" name="password"
+                  <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="password" name="password"
                   >
                 </div>
             </div>
 
-            <button type="submit" class="btn" id="register-btn">Login To Netflix</button>
-            <p class="text-center">
+            <button type="submit" class="btn mt-2" id="register-btn">Login To Netflix</button>
+            <p class="text-center mt-2">
                 <small class="text-white font-weight-bold text-center">Don't have an Account? <a href="{% url 'register'%}">Sign_up here</a></small>
             </p>
 
