--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-*{
 
-}
 #logo{
     width: 100px;
     height: 5vh;
@@ -10,7 +8,7 @@
 #hero{
     background-image: url('/static/images/netflix-cover.jpg');
     height: 100vh;
-    /* width: 100%; */
+   
     
 }
 #button-addon2{
@@ -43,10 +41,7 @@
     width: 100%;
     /* margin-left: -16px; */
 }
-#section{
-    /* padding: 8%; */
 
-}
 #heading2{
     font-size: 8vh;
     font-weight: bold;
@@ -59,9 +54,7 @@
     color: #fff;
 
 }
-.horizontal{
-    /* border: 4px solid grey; */
-}
+
 .headline{
     color: #fff;
 }
@@ -90,4 +83,12 @@
     background-image: linear-gradient(to right top, #000000, #3a161e, #711f2c, #ab2c31, #e2402c);
     color: #fff;
     
+}
+#login-form{
+    color: #fff ;
+	border-radius: 4px;
+	background: #000000;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	padding: 3%;
+    opacity: 0.9;
 }
