st:form-styling - optimize register-styling

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -12,7 +12,7 @@
             {% csrf_token %}
             <div class="form-group">
                 <label for="exampleInputEmail1">User Name</label>
-                <label class="sr-only" for="inlineFormInputGroup">Username</label>
+                <label class="sr-only" for="inlineFormInputGroup">User Name</label>
                 <div class="input-group mb-2">
                   <div class="input-group-prepend">
                     <div class="input-group-text"><i class="fas fa-user"></i></div>
