--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -93,13 +93,13 @@
     opacity: 0.9;
 }
 #form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     color: #fff ;
 	border-radius: 4px;
 	background: #000000;
 	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 	padding: 3%;
     opacity: 0.9;
+}
+#form .input-group-text{
+    width: 100%;
 }
