st:form-styling - optimize register-styling

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -52,9 +52,9 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn" id="register-btn">Register with Netflix</button>
+            <button type="submit" class="btn p-2" id="register-btn">Register with Netflix</button>
             {{form.errors}}
-            <p class="text-center">
+            <p class="text-center mt-2">
                 <small class="text-white font-weight-bold">Already  have an Account? <a href="{% url 'login'%}">Login here</a></small>
             </p>
 
