--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -15,7 +15,7 @@
                 <label class="sr-only" for="inlineFormInputGroup">User Name</label>
                 <div class="input-group mb-2">
                   <div class="input-group-prepend">
-                    <div class="input-group-text"><i class="fas fa-user"></i></div>
+                    <div class="input-group-text"><i class="fas fa-user fonts"></i></div>
                   </div>
                   {{form.username}}
                   <!-- <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Username"> -->
