st:form-styling - optimize register-styling

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -11,6 +11,10 @@
    
     
 }
+#nav{
+    /* position: absolute; */
+    background-color: transparent;
+}
 #button-addon2{
     background-color: #e2402c;
     color: #fff;
@@ -38,8 +42,10 @@
 }
 #row2{
     background-color: #000;
-    width: 100%;
-    /* margin-left: -16px; */
+    
+}
+#padding-left{
+    padding-left: 4%;
 }
 
 #heading2{
@@ -50,7 +56,7 @@
 
 }
 #paragraph2{
-    font-size: 5vh;
+    font-size: 4vh;
     color: #fff;
 
 }
@@ -102,4 +108,14 @@
 }
 #form .input-group-text{
     width: 100%;
+}
+#ml-auto .nav-item .btn{
+    /* position: relative; */
+    float: right;
+}
+#recoomendations{
+    color:#000;
+    font-size: 3vh;
+    text-decoration: none;
+    list-style-type: none;
 }
