--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,6 @@
 {% load static %}
 {% block content %}
 <div class="container-fluid" id="hero">
-    {% include 'navbar.html'%}
     <div class="row ">
         <div class="col-md-6" id="center">
             <h2 id="heading">Unlimited movies, TV
@@ -25,15 +24,15 @@
 
 <!-- <hr class="horizontal"> -->
 
-<!-- <div class="container-fluid" id="row2"> -->
+<div class="container-fluid col-md-12" id="row2">
     <div class="row"id="section">
-        <div class="col-md-6">
+        <div class="col-md-4" id="padding-left">
             <h2 id="heading2">Enjoy on your TV.</h2>
             <p id="paragraph2">Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
         </div>
-        <!-- <div class="col-md-6">
+        <div class="col-md-6">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="description">
-        </div> -->
+        </div>
 
     </div>
     <div class="row">
