--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,14 +1,24 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg" id="nav">
-    <a class="navbar-brand" href="/"><img src="{%  static 'images/netflix-logo.png' %}" id="logo" alt="Netflix"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto"id=" ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#"><button type="button"class="btn btn-danger btn-sm">Sign In</button></a> <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <a class="navbar-brand" href="/"><img src="{%  static 'images/netflix-logo.png' %}" id="logo" alt="Netflix"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+
+    <li class="nav-item active" id="recoomendations">
+      <a class="nav-link" href="{% url 'home' %}">Recommendations <span class="sr-only">(current)</span></a>
+    </li>
+
+    <ul class="ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'login' %}"><button type="button" class="btn btn-danger btn-sm">Sign
+            In</button></a> <span class="sr-only">(current)</span></a>
+      </li>
+
+    </ul>
+  
+  </div>
+  </div>
+</nav>
