--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,7 @@
 
 <body>
     <!-- {% include 'navbar.html'%} -->
-
+    {% include 'navbar.html'%}
     {% block content %}
 
     {% endblock content %}
