--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -31,14 +31,120 @@
             <p id="paragraph2">Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
         </div>
         <div class="col-md-6">
-            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="description">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="description" style="width: 100%;">
         </div>
 
     </div>
-    <div class="row">
+
+
+    <div class="row"id="section2">
+
+        <div class="col-md-3" id="girl-jpg">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="description" style="width: 100%;">
+        </div>
+
+        <div class="col-md-6" id="padding-left-left">
+            <h2 id="heading3">Download your shows to watch offline.</h2>
+            <p id="paragraph2">Save your favorites easily and always have something to watch.</p>
+        </div>
         
+
     </div>
-<!-- </div> -->
+
+    <div class="row"id="section3">
+
+        <div class="col-md-6" id="girl-jpg">
+            <h3 id="watch">Watch everywhere.</h3>
+            <p id="stream">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
+        </div>
+
+        
+
+    </div>
+
+    <div class="row"id="section4">
+
+        <div class="col-md-6">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/cards/kidsValueProp.png" alt="description" style="width: 100%;">
+        </div>
+        <div class="col-md-6" id="padding-same">
+            <h2 id="heading2">Create profiles for kids.</h2>
+            <p id="paragraph2">Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</p>
+        </div>
+        
+
+    </div>
+
+    <div class="row"id="section5">
+        <div class="col-md-6" id="padding-left">
+            <h1 id="heading11">Have an Android Phone? Get our new free plan!.</h1>
+            <p id="paragraph2">Watch a selection of new movies and TV shows without adding any payment details!
+            </p>
+            <button id="app">Get the App <i
+                class="fa-solid fa-angle-right"></i></button>
+        </div>
+        <div class="col-md-6">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ab36101/nmhp/en.jpg" alt="description" style="width: 100%;">
+        </div>
+
+    </div>
+
+    <div class="row" id="questions">
+        <div class="col-md-2"></div>
+        
+
+        <div class="col-md-8">
+            <h3 class="text-center" id="frequent">Frequently asked Questions</h3>
+
+            <div class="quiz">
+                <p>What is Netflix?</p>
+                <i class="fa-solid fa-plus" id="plus"></i>
+            </div>
+
+            <div class="quiz">
+                <p>How Much does Netflix cost?</p>
+                <i class="fa-solid fa-plus" id="plus"></i>
+            </div>
+
+            <div class="quiz">
+                <p>Where can i watch?</p>
+                <i class="fa-solid fa-plus" id="plus"></i>
+            </div>
+
+            <div class="quiz">
+                <p>How do I cancel?</p>
+                <i class="fa-solid fa-plus" id="plus"></i>
+            </div>
+
+            <div class="quiz">
+                <p>What can I watch on Netflix?</p>
+                <i class="fa-solid fa-plus" id="plus"></i>
+            </div>
+
+            <div class="quiz">
+                <p>Is Netflix good for kids?</p>
+                <i class="fa-solid fa-plus" id="plus"></i>
+            </div>
+
+
+            <p class="headline my-4">Ready to watch? Enter your email to create or restart your membership.</p>
+
+            <div class="input-group input-group-lg mb-3" id="index">
+                <input type="text" class="form-control" placeholder="Email Address..." aria-label="Recipient's username"
+                    aria-describedby="button-addon2" id="input">
+                <div class="input-group-append">
+                    <button class="btn" type="button" id="button-addon2">Get Started <i
+                            class="fa-solid fa-angle-right"></i></button>
+                </div>
+            </div>
+
+
+
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+    
+
 
 
 {% endblock content%}
