ft:deployment - deployment to heroku

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container">
-    <h3 class="text-center mt-3">Movie And Tv shows categories</h3>
+    <h3 class="text-center mt-3">Recommended Movie And Tv shows categories</h3>
     <h3 class="text-center">Now Playing</h3>
     <hr>
     <div class="row">
