--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,8 @@
 {% load static %}
 {% block content %}
 <div class="container-fluid" id="register-page">
-    <h3 class="text-center p-3 font-weight-bold">User Login</h3>
+    <h3 class="text-center p-3 font-weight-bold">Application User Login</h3>
+    <p class="text-center text-white">Welcome to Netflix ..Login</p>
 <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
